[gd_scene load_steps=4 format=2]

[ext_resource path="res://Opening.gd" type="Script" id=1]
[ext_resource path="res://fonts/Lilliput Steps.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="Opening" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1922.0
margin_bottom = 1089.0
color = Color( 0, 0, 0, 1 )

[node name="white" type="Label" parent="."]
margin_left = 608.0
margin_top = 398.0
margin_right = 1302.0
margin_bottom = 564.0
custom_fonts/font = SubResource( 1 )
text = "Wake Up"
align = 1
valign = 1

[node name="gray" type="Label" parent="."]
visible = false
margin_left = 608.0
margin_top = 398.0
margin_right = 1302.0
margin_bottom = 564.0
custom_colors/font_color = Color( 0.517647, 0.517647, 0.517647, 1 )
custom_fonts/font = SubResource( 1 )
text = "Wake Up"
align = 1
valign = 1

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 780.0
margin_top = 438.0
margin_right = 1126.0
margin_bottom = 531.0

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
